# cellsnap

./: LICENSE  README.md  setup.cfg  setup.py
Manuscript_archive/: readme.md
Manuscript_archive/Benchmark_duo/code/: Feature-only-GNN.ipynb  Spatial-only-GNN.ipynb  plot_analysis.Rmd
Manuscript_archive/Benchmark_spleen/: plot_bench.Rmd  prep_murine_bench.ipynb
Manuscript_archive/Benchmark_spleen/Image_alpha/: benchmark_CH_imgA.ipynb  benchmark_DB_imgA.ipynb  benchmark_Mod_imgA.ipynb  benchmark_SS_imgA.ipynb  cnn_train_alpha0.6.py  cnn_train_alpha0.7.py  cnn_train_alpha0.8.py  cnn_train_alpha0.9.py  get_cnn_alpha_realted.ipynb  get_dbGNN_embed_imgA.ipynb
Manuscript_archive/Benchmark_spleen/Image_size/: benchmark_CH_imgsize.ipynb  benchmark_DB_imgsize.ipynb  benchmark_Mod_imgsize.ipynb  benchmark_SS_imgsize.ipynb  cnn_train_imgsize256.py  (+5 more)
Manuscript_archive/spatial-clust-scripts-main/: data.py  graph.py  model.py  train.py  utils.py  visualize.py
envs/: environment.yml  requirements.txt
media/: readme.md
src/: LICENSE
src/CellSNAP/: cellsnap.py  datasets.py  graph.py  main.py  models.py  preprocessing.py  utils.py
src/CellSNAP.egg-info/: PKG-INFO  SOURCES.txt
src/cellsnap/: datasets.py  graph.py  main.py  models.py
src/cellsnap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorials/: CellSNAP_codex_murine.ipynb  CellSNAP_codex_murine_morphology.ipynb  CellSNAP_smi_uterine.ipynb
tutorials/.ipynb_checkpoints/: CellSNAP_codex_murine-checkpoint.ipynb  CellSNAP_smi_uterine-checkpoint.ipynb
tutorials/archive/: CellSNAP_smi_uterine.ipynb
(+84 files in other folders)
