[metadata]
name = cellsnap
version = 0.0.4
author = Sheng Gao, Bokai Zhu
author_email = gaosheng0321@gmail.com, zhubokai@mit.edu 
description = A package for learning single-cell representations embedding by integrating cross-domain information.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sggao/CellSNAP
project_urls =
    Bug Tracker = https://github.com/sggao/CellSNAP/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires:
    anndata==0.10.6
    leidenalg==0.9.1
    matplotlib==3.6.2
    numpy>=1.23.5
    pandas==1.5.3
    pandas==2.0.0
    python_igraph==0.11.4
    scanpy==1.10.0
    scikit_image==0.19.3
    scikit_learn==1.2.1
    scipy==1.9.1
    torch==2.0.0
    torch==1.12.1
    torch_geometric==2.3.0
    torchvision==0.13.1
    tqdm==4.64.1

[options.packages.find]
where = src